# clusterfun

./: .eslintrc.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  README.md  next.config.js  package-lock.json  package.json  prettier.config.js  pyproject.toml  setup.cfg  tailwind.config.ts
.github/workflows/: tests.yml
_next/static/chunks/: 22.027a7ca4774b4f2e.js  f2d0f643.94b0b7738536c0ff.js
_next/static/chunks/app/: layout-ffc9bebc74c4fa46.js
_next/static/css/: bee57f36e22a8755.css
app/: .eslintrc.json  Home.tsx  globals.css  layout.tsx  next.config.js  package-lock.json  package.json  page.tsx
app/components/: BackButton.tsx  Browser.tsx  Button.tsx  Code.tsx  CustomDropdown.tsx  CustomTextFieldWithDropdown.tsx  DocumentationSidebar.tsx  DynamicCodeBlock.tsx  Filter.tsx  Footer.tsx  Grid.tsx  ImagePlot.tsx  InformationItem.tsx  MediaGrid.tsx  MediaGridItem.tsx  MediaPage.tsx  MediaStats.tsx  Navbar.tsx  Pagination.tsx  Plot.tsx  PlotPage.tsx  PlotlyImagePlot.tsx  PlotlyPlot.tsx  PreviewMedia.tsx  Previewer.tsx  SideBar.tsx  StandardDoc.tsx
app/components/MediaPage/: ButtonWithIcon.tsx  HeaderControls.tsx  MediaPage.tsx  utils.ts
app/components/grid/: BoundingBoxCheck.tsx  MediaGridItem.tsx  MediaLabels.tsx  Pagination.tsx  ShowValueDropdown.tsx  SortDropDown.tsx
app/components/label/: Panel.tsx
app/models/: Config.tsx  Constants.tsx  FilterInterface.tsx
app/pages/: _app.tsx  _document.tsx  index.tsx
app/pages/plots/: [uuid].tsx
app/pages/plots/[uuid]/: grid.tsx
app/pages/plots/[uuid]/media/: [mediaIndex].tsx
app/plots/components/: BackButton.tsx  Code.tsx  Error.tsx  Filter.tsx  FilterContext.tsx  FiltersManager.tsx  ImagePlot.tsx  InformationItem.tsx  Plot.tsx  PlotPage.tsx  PlotlyImagePlot.tsx  PlotlyPlot.tsx  PreviewMedia.tsx  SideBar.tsx  layout.tsx
app/plots/models/: BoundingBox.tsx  Colors.tsx  Config.tsx  Constants.tsx  Dimension.tsx  FilterInterface.tsx  Media.tsx
app/plots/requests/: GetConfig.tsx  GetFilteredPlotData.tsx  GetMedia.tsx  GetMediaItems.tsx  GetPlotData.tsx  GetUuid.tsx  LabelStore.tsx
app/requests/: GetConfig.tsx  GetFilteredPlotData.tsx  GetMedia.tsx  GetMediaItems.tsx  GetPlotData.tsx  GetUuid.tsx
app/styles/: globals.css
app/utils/: dtypeIconMap.ts
clusterfun/: __init__.py  app.py  config.py  constants.py  main.py  plot.py  serve_cli.py  validation.py
clusterfun/frontend/: 404.html  index.html  index.txt
clusterfun/frontend/404/: index.html
clusterfun/frontend/_next/static/1QyiY8tsv4hAH3HR9ReVe/: _buildManifest.js
clusterfun/frontend/_next/static/chunks/: 22.94ebc66962dcd0f8.js  23-8126128752749016.js  311.6371271c6213fe76.js  483-2d99a375fdcaeaa9.js  500-9855c0cda36bb0be.js  500-9beb637c2f8db305.js  500-fee090358e8ae436.js  596-a3442eef2dd9cdb6.js  657-bf6fa3f4fc662402.js  660.8e595c259eac1e04.js  (+29 more)
clusterfun/models/: filter.py  media_indices.py  media_item.py
clusterfun/plot_types/: __init__.py  bar_chart.py  confusion_matrix.py  grid.py  histogram.py  pie_chart.py  scatter.py  violin.py
clusterfun/storage/: loader.py  storer.py
clusterfun/storage/client/: __init__.py  base.py  http.py  local.py  s3.py
clusterfun/storage/local/: data.py  helpers.py  label_manager.py  loader.py  storer.py
clusterfun/utils/: s3.py
scripts/: audio.py  bar_chart.py  bounding_box.py  grid.py  histogram.py  local_data.py  pie.py  scatter.py  violin.py
scripts/umap/: config.yaml  main.py
scripts/umap/dataset/: cifar10.yaml
scripts/umap/model/: clip.yaml
tests/: conftest.py  test_bounding_box.py  test_confusion_matrix.py  test_pie.py  test_plot.py  test_storage_client.py  test_storer.py
tests/samples/: cifar10_embedding.csv  wiki-art.csv
(+36 files in other folders)
