[tool.poetry]
name = "clusterfun"
version = "0.6.0a7"
description = "Clusterfun - a plotting library to inspect data"
authors = ["Jochem Gietema <jochem@giete.ma>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.0"
pyarrow = ">=13,<15"
fastapi = "*"
uvicorn = "*"
orjson = "*"
boto3 = "^1.26.0"
requests = "*"
pillow = "*"
urllib3 = "<2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
pre-commit = "^2.20.0"
isort = "^5.13.2"
flake8 = "^6.0.0"
ipdb = "^0.13.11"
mypy = "^1.10.0"
types-pillow = "^9.4.0.17"
types-ujson = "^5.7.0.1"
types-requests = "^2.28.11.15"
pylint = "^3.1.0"
bumpversion = "^0.6.0"
jupyter = "^1.0.0"
ruff = "^0.4.7"

taskipy = "^1.12.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry.scripts]
clusterfun = "clusterfun.serve_cli:main"

[tool.taskipy.tasks]
dev = "uvicorn clusterfun.main:APP --reload"
histogram = "python scripts/histogram.py"
scatter = "python scripts/scatter.py"
pie = "python scripts/pie.py"
violin = "python scripts/violin.py"
grid = "python scripts/grid.py"
audio = "python scripts/audio.py"

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "df",
    "f",
    "y",
    "x",
]
disable=[
    "fixme",
    "R0801"
]
